# bytes-to-watts-webinar

./: .gitignore  README.md  pyproject.toml
scripts/demo_project/: README.md  cwd.ipynb  pyproject.toml
scripts/demo_project/control/: energy_control.py  manual_control.py
scripts/demo_project/data/: battery_optimized.csv  battery_status.csv  controlled_energy_data.csv  energy_consumption.csv  forecast_model.pkl  predicted_energy.csv  solar_generation.csv
scripts/demo_project/monitoring/: stream_data.py  visualize_dashboard.py
scripts/demo_project/optimization/: optimize_usage.py
scripts/demo_project/prediction/: predict_energy.py  train_model.py
scripts/demo_project/templates/: index.html
scripts/demo_project/utils/: config.py  data_loader.py
