[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-project"
version = "0.0.1"
description = "A demo project for the Byte-to-Watts webinar"
license = "MIT"
authors = [{name = "Chrispine Tinega", email = "hello@chrispinetinega.com"}]
requires-python = ">=3.10"
readme = "README.md"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=2.2.2"
matplotlib = ">=3.10.0"
pandas = ">=2.2.3"
flask = ">=3.1.0"
joblib = ">=1.4.2"
scikit-learn = ">=1.6.1"
streamlit = ">=1.41.1"
