[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-project"
version = "0.0.1"
description = "A demo project for the Byte-to-Watts webinar"
license = "MIT"
authors = [{name = "Chrispine Tinega", email = "hello@chrispinetinega.com"}]
requires-python = ">=3.10"
readme = "README.md"

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = ">=2.3.4"
matplotlib = ">=3.10.7"
pandas = ">=2.3.3"
flask = ">=3.1.2"
joblib = ">=1.5.2"
scikit-learn = ">=1.7.2"
streamlit = ">=1.51.0"
